--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,5 +21,5 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
-          start: npm run start
+          start: MONGODB_URI=${{secrets.MONGODB_URI}} npm run start
           wait-on: http://localhost:3001
