--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,5 +23,5 @@ jobs:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
         with:
           command: npm run test:e2e
-          start: MONGODB_URI=$MONGODB_URI npm run start
+          start: MONGODB_URI="$MONGODB_URI" npm run start
           wait-on: http://localhost:5000
